fix(gradle): The target shadowJar now creates an all-in-one fat Jar file to run.