@@ -12,10 +12,11 @@ buildscript {
 plugins {
     id 'application'
     id 'com.diffplug.spotless' version '5.14.0'
-    id "it.nicolasfarabegoli.conventional-commits" version "3.1.3"
+    id "it.nicolasfarabegoli.conventional-commits" version "3.1.0"
+    id 'com.github.johnrengelman.shadow' version '8.1.0'
 }
 
-apply plugin: 'org.openjfx.javafxplugin'
+// apply plugin: 'org.openjfx.javafxplugin'
 
 group = 'com.comp5590'
 version = '1.0-SNAPSHOT'
@@ -29,9 +30,26 @@ repositories {
     }
 }
 
+def currentOS = org.gradle.internal.os.OperatingSystem.current()
+def platform
+if (currentOS.isWindows()) {
+    platform = 'win'
+} else if (currentOS.isLinux()) {
+    platform = 'linux'
+} else if (currentOS.isMacOsX()) {
+    platform = 'mac'
+} else {
+    throw new GradleException("Unsupported OS: ${currentOS}")
+}
+System.out.println("Platform: " + platform)
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // JavaFX
+    implementation "org.openjfx:javafx-base:21.0.2:${platform}"
+    implementation "org.openjfx:javafx-graphics:21.0.2:${platform}"
+    implementation "org.openjfx:javafx-controls:21.0.2:${platform}"
+    implementation "org.openjfx:javafx-fxml:21.0.2:${platform}"
     // ORM
     implementation "org.hibernate.orm:hibernate-core:6.4.4.Final"
     implementation "jakarta.persistence:jakarta.persistence-api:3.1"
@@ -53,20 +71,19 @@ dependencies {
     implementation 'org.reflections:reflections:0.9.12'
 }
 
-javafx {
+/* javafx {
     version = "16"
     modules = ['javafx.controls', 'javafx.graphics']
-}
+} */
 
-mainClassName = 'com.comp5590.Main'
-
-application {
-    mainClassName = 'com.comp5590.Main'
-}
+mainClassName = 'com.comp5590.Launcher'
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.comp5590.Main'
+        attributes 'Main-Class': mainClassName
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
@@ -84,6 +101,24 @@ spotless {
         trimTrailingWhitespace()
         endWithNewline()
         indentWithSpaces(4)
+    }
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
     }
 }
 
